Fixed overflow bug on mobile

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -6,6 +6,8 @@
 
 body, html{
     overflow:hidden;
+    overflow-x:hidden
+    
 }
 
 
